spacing issues on educator sym page

--- a/sites/all/themes/s2015/sass/s2015.hacks.scss
+++ b/sites/all/themes/s2015/sass/s2015.hacks.scss
@@ -226,7 +226,7 @@ body {
    }
 }
 
-.sessions-events.studio-courses {
+.sessions-events.studio-courses, .sessions-events.educator-symposium  {
     .imported-content-p {
         margin-top:0; 
     }
